--- a/manifest.json
+++ b/manifest.json
@@ -5,13 +5,13 @@
        {
           "purpose":"maskable",
           "sizes":"512x512",
-          "src":"icon512_maskable.png",
+          "src":"icon/icon512_maskable.png",
           "type":"image/png"
        },
        {
           "purpose":"any",
           "sizes":"512x512",
-          "src":"icon512_rounded.png",
+          "src":"icon/icon512_rounded.png",
           "type":"image/png"
        }
     ],
@@ -22,9 +22,22 @@
     "name":"Tv-Maze",
     "short_name":"Tv-Maze",
     "description":"Search for shows and movies",
-    "start_url":"https://mochasm.github.io/"
+    "start_url":"https://mochasm.github.io/",
       
-
+    "screenshots": [
+      {
+        "src": "ss/screenshot-desktop.png",
+        "sizes": "1440x900",
+        "type": "image/png",
+        "form_factor": "wide"
+      },
+      {
+        "src": "ss/screenshot-mobile.png",
+        "sizes": "375x812",
+        "type": "image/png",
+        "form_factor": "narrow"
+      }
+    ]
     
 
  }
